humongous update
- added webserver
- new cmd system (litecommands)
- removed gAuth 2FA, added 2FA with discord
- better area system
- better cfg system (worse in some areas)
- updated to java 19
- switched to SLF4J internally
- now using SQLite instead of MySQL
- better DatabaseReflection (how?)
- fixed a lot of bugs

code quality can sometimes be trash, im too lazy to write good code